

2021-01-17 21:30:00
 * changed from hwe to generic kernel

2021-01-17 21:00:00 
 * using template from pugetsystems to build customized ISO with cubic
 2021.01.40 in ubuntu 18.04.5 desktop
 * changes:
   * fixed the unicode decoding error while console log-in caused by cubic
   by replacing the /usr/share/cubic/pages/terminal_page.py
   * replacing the txt.cfg, grub.cfg and isolinux.cfg with these in repo
   * put the auto-inst.seed into $CD_IMG/preseed/
 * NOTE:
   * txt.cfg is for CDROM/DVD bootup and grub.cfg is for usbstick