@@ -94,8 +94,9 @@ d-i	debian-installer/quiet	boolean false
 d-i	debian-installer/splash	boolean false
 
 # PoC: copy files from CDROM to target
-d-i preseed/late_command string cp -r /cdrom/post-install /target/; \
-        in-target sudo -u ubuntu mkdir /home/ubuntu/preseed
+d-i preseed/late_command string apt-install policykit-1; cp -r /cdrom/post-install /target/; \
+        in-target /bin/sh /post-install/action.sh 
+	
 
 # Avoid that last message about the install being complete.
 # This will just finish and reboot
