@@ -1,0 +1,6 @@
+#!/bin/bash
+
+while true
+do
+    sleep 10000
+done
