@@ -1,4 +1,6 @@
 
+2021-02-17 22:00:00
+ * the sample service started after unattended installation
 
 2021-01-17 21:30:00
  * changed from hwe to generic kernel
